--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   pull_request:
-    branches: [develop]
+    branches: [Develop]
 
 jobs:
   Build:
@@ -17,4 +17,4 @@ jobs:
       - run: npm test -- --coverage
         env:
           CI: true
-          
+
